# Bluetooth-N64-Controller

./: .gitignore  Joybus_Transport_Workspace.code-workspace  README.md
Archive/NCS/: Joybus_Central_Peripheral.code-workspace  Joybus_Transport_Workspace.code-workspace  README.md
Arduino/: README.md
Arduino/Teensy4_to_Hardware/: Teensy4_to_Hardware.ino
Cont_Resp_Capture/: CMakeLists.txt  prj.conf
Cont_Resp_Capture/src/: main.c
Joybus_Central/: prj.conf
Joybus_Central/build1/: CMakeCache.txt  build.ninja  cmake_install.cmake  domains.yaml  merged.hex
Joybus_Central/src/: main.c
Joybus_Peripheral/: CMakeLists.txt  prj.conf
Joybus_Peripheral/build1/: .ninja_deps  .ninja_log  .vscode-nrf-connect.json  CMakeCache.txt  build.ninja  build_info.yml.bak  compile_commands.json
Joybus_Peripheral/nosys/: .ninja_deps  .ninja_log  .vscode-nrf-connect.json  CMakeCache.txt  build.ninja  build_info.yml.bak  cmake_install.cmake  compile_commands.json  (+1 more)
Serial1_central_blejoybus/: prj.conf
Serial1_central_bleuart/: Serial1_central_bleuart.ino
Serial1_nRFbleuart/: Serial1_nRFbleuart.ino
Serial1_periph_blehid/: BLEHidJoybus.cpp  BLEHidJoybus.h
Serial1_periph_blejoybus/: CMakeLists.txt  nrf52840dk_nrf52840.overlay  prj.conf
Serial1_periph_bleuart/: Serial1_periph_bleuart.ino
Serial_central_blehid/: BLEClientHidJoybus.cpp  BLEClientHidJoybus.h  Serial_central_blehid.ino
Serial_periph_blehid/: Serial_periph_blehid.ino
Teensy4_to_Controller/: Teensy4_to_Controller.ino  hf_pulseIn.ino
Teensy4_to_Hardware/: Teensy4_to_Hardware.ino
pico-sdk/: README.md
(+743 files in other folders)
